# Robothon-2026

./: README.md
pick_place_pkg/: package.xml  setup.cfg  setup.py
pick_place_pkg/pick_place_pkg/: pick_place_node.py
so101_description/config/: ros2_controllers.yaml
so101_leader_moveit_config/: CMakeLists.txt  package.xml
so101_leader_moveit_config/config/: initial_positions.yaml  so101_leader_new_calib.ros2_control.xacro  so101_leader_new_calib.srdf  so101_leader_new_calib.urdf.xacro
so101_leader_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
so101_mujoco/: CMakeLists.txt  package.xml
so101_mujoco/launch/: so101_mujoco.launch.py
so101_mujoco/mujoco/: scene.xml  so101_new_calib.xml
so101_mujoco/scripts/: so101_mujoco_bridge.py  so101_mujoco_viewer.py
so101_unified_bringup/: CMakeLists.txt  README.md  package.xml
so101_unified_bringup/config/: camera_bridge.yaml  ompl_planning.yaml
so101_unified_bringup/include/so101_unified_bringup/: moveit_server.hpp
so101_unified_bringup/launch/: main.launch.py  moveit_server.launch.py
so101_unified_bringup/src/: moveit_server.cpp
so101_unified_bringup/srv/: ActionTraj.srv  JointSat.srv  PickFront.srv  PickObject.srv  PoseReq.srv  RotateEffector.srv
so101_unified_bringup/worlds/: empty_world.sdf
